@@ -532,6 +532,8 @@ inlead,	   0x4E79B0,	0x4F0470,	0x4E7A70,	"Main_Screen_Form_open_quick_build_choo
 repl call, 0x4E9941,	0x4F273F,	0x4E9A01,	"Context_Menu_get_selected_item_on_unit_rcm",	"int (__fastcall *) (Context_Menu * this)"
 define,	   256,		257,		256,		"LBL_WAKE",					"int"
 define,	   255,		256,		255,		"LBL_ACTIVATE",					"int"
+define,	   0x4C1280,	0x4C8860,	0x4C1310,	"City_sum_buildings_naval_power",		"int (__fastcall *) (City * this)"
+repl call, 0x4A78EE,	0x4AE5A5,	0x4A797E,	"City_sum_buildings_naval_power_for_zoc",	""
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
